# Todolist-App

./: .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: action.yml
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_options.py
goals/: models.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py
todolist/: settings.py  urls.py
todolist/todolist/: settings.py
